    people are mistaken by thinking it was "add a child in a family".

* Template (etc/perso.txt)
  - [20 Jan 01] In personal page template file (etc/perso.txt), the macro
    "%nobility_titles;" has been decomposed into "%foreach;nobility_title;"
    and "%nobility_title;", allowing to display the nobility titles
    differently (e.g. in a list <ul>..</ul>).

* GeneWeb to Gedcom (gwb2ged)
  - [18 Jan 01] Fixed problem for names with declinations: they were
    exported with all their declinations; now just the 'nominative'
    form is exported.

* Geneweb compiler (gwc)
  - [07 Jan 01] Put back the option "-sh #" (removed in version 3.08):
    it seems that some users are be still interested in this option, even
    with the new form "-sep".

* Bases configuration files (base.gwf)
  - [30 Dec 00] In example file a.gwf, fixed comment about customized
    variables: for variable defined as var_foo, the usage in the text
    is %vfoo; (not %foo;).
  - [29 Dec 00] Added variable "always_surname" telling to always print
    the children surnames in descendant display, even if same than the
    father's (default = no).

* Lexicon (lang/lexicon.txt)
  - [30 Dec 00] Fixed German translations (Frank Komarek + Falko Trojahn)
  - [29 Dec 00] Fixed some Spanish translations (Frank Komarek)

* Documentation
  - [17 Jan 01] Added French translation of "The GeneWeb source file format"
    (Melchior de Contades)

GeneWeb version 3.10
--------------------

* GeneWeb server or CGI (gwd)
  - [14 Dec 00] Added a system of general macros for "sources" and
    "notes". You can define customized variables in the configuration
    file (base.gwf): their values will be replaced in the "sources" and
    in the "notes". The syntax in configuration file is "var_ident=value"
    and in the sources and notes: "%vident;".
  - [03 Dec 00] Fixed bug in Hebrew calendar computation (example: Hebrew
    day was good for Gregorian date 2001-11-30 but incorrect for the following
    day 2001-12-01).