@@ -16,14 +16,13 @@ height=108 src="../images/gwlogo.gif" align=left border=0 alt=GeneWeb></a>
 </font>
 <br><br>
 
-This part indicates the procedure to you to merge databases. It is
-still rather manual, but it may be improved in the future.
+This part indicates the procedure to you to merge databases.
 
 <p>
 
-This can be done only with interactive commands. If you are used to
-<b><a href="gwsetup.htm">gwsetup</a></b>, you cannot do it, it is not
-implemented, sorry.
+If you are not a specialist of interactive commands, use the program
+<b><a href="gwsetup.htm">gwsetup</a></b> which tells you how to do
+that (you can then ignore the rest of the present chapter).
 
 <p>
 
