@@ -1243,9 +1243,7 @@ data base, if the case you recorded the same person twice.
 <p>
 
 Note: we do not speak here about how to merge two <strong>data
-bases</strong>: this is treated <a href="merge.htm">elsewhere</a>: it
-is not possible to do it on line (this chapter relates only to on line
-updates).
+bases</strong>: this is treated <a href="merge.htm">elsewhere</a>.
 
 <p>
 
