@@ -17,15 +17,14 @@ height=108 src="../images/gwlogo.gif" align=left border=0 alt=GeneWeb></a>
 <br><br>
 
 Cette partie vous indique la proc&eacute;dure pour fusionner des bases
-de donn&eacute;es. C'est encore assez manuel, mais ce sera
-peut-&ecirc;tre am&eacute;lior&eacute; dans le futur.
+de donn&eacute;es.
 
 <p>
 
-Cela ne peut se faire qu'avec des commandes int&eacute;ractives. Si
-vous avez l'habitude d'utiliser <b><a
-href="gwsetup.htm">gwsetup</a></b>, vous ne pourrez pas le faire, ce
-n'est pas pr&eacute;vu.
+Si vous n'&ecirc;tes pas sp&eacute;cialiste des commandes
+int&eacute;ractives, utilisez le programme <b><a
+href="gwsetup.htm">gwsetup</a></b> qui vous indiquera comment faire
+(vous pouvez alors ignorer le reste du pr&eacute;sent chapitre).
 
 <p>
 
