@@ -275,7 +275,7 @@ personne. Reportez-vous aux sections:
 <p>
 
 Si le propri&eacute;taire de la base l'a autoris&eacute;, (voir <a
-href="ect?m=DOC;v=fr/start.htm#Cnf">fichier de configuration</a>), vous aurez le
+href="start.htm#Cnf">fichier de configuration</a>), vous aurez le
 choix "Envoyer image" et &eacute;ventuellement "Supprimer
 image". Reportez-vous aux sections:
 
@@ -1344,7 +1344,7 @@ enfants.
 Vous tomberez sur ce formulaire &agrave; partir d'une page personnelle
 apr&egrave;s avoir cliqu&eacute; sur "Mise &agrave; jour", puis
 "Envoyer image", &agrave; condition que le propri&eacute;taire de la
-base en ait donn&eacute; l'<a href="ect?m=DOC;v=fr/start.htm#Cnf">autorisation</a>,
+base en ait donn&eacute; l'<a href="start.htm#Cnf">autorisation</a>,
 et que le champ "image" de la personne soit vide.
 
 <p>
@@ -1365,7 +1365,7 @@ contenu du champ "image".
 Vous tomberez sur ce formulaire &agrave; partir d'une page personnelle
 apr&egrave;s avoir cliqu&eacute; sur "Mise &agrave; jour", puis
 "Supprimer image", &agrave; condition que le propri&eacute;taire de la
-base en ait donn&eacute; l'<a href="ect?m=DOC;v=fr/start.htm#Cnf">autorisation</a>.
+base en ait donn&eacute; l'<a href="start.htm#Cnf">autorisation</a>.
 
 <p>
 
@@ -1419,8 +1419,7 @@ cas o&ugrave; vous auriez mis deux fois la m&ecirc;me personne.
 
 Remarque: nous ne parlons pas ici de comment fusionner deux
 <strong>bases de donn&eacute;es</strong>: cela est trait&eacute; <a
-href="ect?m=DOC;v=fr/merge.htm">ailleurs</a>: il n'est pas possible de le faire en
-ligne (ce chapitre ne concerne que les mises-&agrave;-jour en ligne).
+href="merge.htm">ailleurs</a>.
 
 <p>
 
