@@ -71,6 +71,8 @@ Apply on a data base...
 
 <li>the <a href="gwsetup?lang=$l;v=save.htm">saving and restoring</a>
 
+<li>the <a href="gwsetup?lang=$l;v=merge.htm">merging</a> with other data bases
+
 <li>the <a href="gwsetup?lang=$l;v=consang.htm">initialisation of
 consanguinities</a>
 
