@@ -6,12 +6,17 @@
 <body background="file://$w/images/gwback.jpg">
 
 <center><h1><font color=red>Erreur</font></h1></center>
+
 <p>
+
 La commande pr&eacute;c&eacute;dente s'est termin&eacute;e avec un
 code d'erreur. Il se peut que votre base de donn&eacute;es "$o" n'ait
-pas &eacute;t&eacute; cr&eacute;&eacute;e.<p> Regardez dans les <a
-href="gwsetup?lang=$l;v=traces.htm">traces</a>, peut-&ecirc;tre y
-trouverez-vous une explication.
+pas &eacute;t&eacute; cr&eacute;&eacute;e.
+
+<p>
+
+Regardez dans les <a href="gwsetup?lang=$l;v=traces.htm">traces</a>,
+peut-&ecirc;tre y trouverez-vous une explication.
 
 <p>
 
