@@ -7,7 +7,7 @@
 
 <center><h1><font color=red>Nom incorrect</font></h1></center>
 
-Vous ne pouvez pas choisir "$o" comme nom de bases de donn&eacute;es car
+Vous ne pouvez pas choisir "$o" comme nom de base de donn&eacute;es car
 il contient des caract&egrave;res interdits.
 
 <p>
