@@ -74,6 +74,8 @@ GeneWeb</a>
 
 <li>la <a href="gwsetup?lang=$l;v=delete.htm">suppression</a>
 
+<li>la <a href="gwsetup?lang=$l;v=merge.htm">fusion</a> avec d'autres bases
+
 <li>la <a href="gwsetup?lang=$l;v=save.htm">sauvegarde et restauration</a>
 
 <li>l'<a href="gwsetup?lang=$l;v=consang.htm">initialisation des
